Adicionado seção de comidas

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </li>
 
-      </ul>
+      </ul>  
     </section>
 
     <section>
@@ -86,9 +86,42 @@
 
         </li>
 
-      </ul>
+      </ul>  
     </section>
 
+        <section>
+      <h2>Comidas</h2>
+
+      <ul>
+        <li>
+          <div class="Detalhes">
+            <h3>Carnes</h3>
+            <p class="Descrição">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <strong class="Preço">
+            R$37,70
+          </strong>
+        </li>
+
+        <li>
+          <div class="Detalhes">
+            <h3>Arroz</h3>
+            <p class="Descrição">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <strong class="Preço">
+            R$17,70
+          </strong>
+
+        </li>
+
+      </ul>  
+    </section>
 
   </body>
 
